[gd_scene load_steps=3 format=3 uid="uid://dsawema5fva7b"]

[ext_resource type="Script" uid="uid://bt61nkkb2goxl" path="res://scene/event/MindStateBattleInputPanel/mind_state_battle_input_panel.gd" id="1_e67ks"]
[ext_resource type="PackedScene" uid="uid://djbxpw8pv5etv" path="res://scene/Seat/MindStateSelectSeat/MindStateSelectSeat.tscn" id="2_e67ks"]

[node name="MindStateBattleInputPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_e67ks")

[node name="MindStateColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 450.0
offset_bottom = 700.0

[node name="SelectSeat" parent="." instance=ExtResource("2_e67ks")]
layout_mode = 0
offset_left = 115.0
offset_top = 170.0
offset_right = 335.0
offset_bottom = 490.0

[node name="Mask" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 115.0
offset_top = 170.0
offset_right = 335.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmTargetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 600.0
offset_right = 275.0
offset_bottom = 650.0
text = "чбошод"
